--- a/style/style.css
+++ b/style/style.css
@@ -442,9 +442,9 @@ span{
 .portfolio-gallery{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-   gap: 2rem;
+    gap: 2rem;
 }
-.port-box{
+    .port-box{      /*display: none */
     position: relative;
     border-radius: 15px;
     overflow: hidden;
@@ -454,7 +454,15 @@ span{
     align-items: center;
     border: 2px solid var(--main-color);
     box-shadow: var(--main-color);
+    /* display: none; */
 }
+
+/* .port-box:nth-child(1),
+.port-box:nth-child(2),
+.port-box:nth-child(3){
+    display: inline-block;
+} */
+
 .port-image{
     display: flex;
     align-items: center;
@@ -526,6 +534,25 @@ span{
     font-size: 8rem;
     text-align: center;
     margin: 2rem 0;
+}
+#load-more{
+    margin-top: 20px;
+    display: inline-block;
+    padding: 13px 30px;
+    border: 1px solid #334;
+    color: #334;
+    font-size: 16px;
+    background-color: #fff;
+    cursor: pointer;
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+}#load-more:hover{
+    background-color: crimson;
+    border-color: crimson;
+    color: #fff;
 }
 
 /* Skill styles End */
@@ -768,7 +795,7 @@ span{
 
 
 /* footer styles */
-.footer{
+/* .footer{
     position: relative;
     bottom: 0;
     width: 100%;
@@ -824,7 +851,7 @@ span{
     text-align: center;
     font-size: 16px;
     color: white;
-}
+} */
 
 /* Responsive styles */
 @media(max-width:1285px){
@@ -961,3 +988,128 @@ span{
 
 }
 
+/* start a new animation footer styles */
+
+footer{
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100%;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+footer .social-iconsF, 
+footer .menu{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    flex-wrap: wrap;
+}
+footer .social-iconsF li,
+footer .menu li{
+    list-style: none;
+}
+footer .social-iconsF li a,
+footer .menu li a{
+    font-size: 2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+footer .social-iconsF li a:hover{
+    transform: translateY(-10px);
+}
+footer .menu li a{
+    font-size: 1.2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    text-decoration: none;
+    opacity: 0.75;
+}
+footer .menu li a:hover{
+    opacity: 1;
+}
+footer p{
+    color: #fff;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.1em;
+
+}
+footer .wave{
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(/Image/footer-photo/wave.png);
+    background-size: 1000px 100px;
+}
+footer .wave#wave1{
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+    animation: animateWave 4s linear infinite;
+}
+footer .wave#wave2
+{
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animateWave_02 4s linear infinite;
+}
+
+
+footer .wave#wave3
+{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+}
+footer .wave#wave4
+{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animateWave_02 3s linear infinite;
+}
+
+@keyframes animateWave
+{
+    0%
+    {
+        background-position-x: 1000px;
+    }
+    100%
+    {
+        background-position-x: 0px;
+    }
+}
+
+@keyframes animateWave_02
+{
+    0%
+    {
+        background-position-x: 0px;
+    }
+    100%
+    {
+        background-position-x: 1000px;
+    }
+}
+
+
+
+
+
+
+/* start a new animation footer styles end */
