--- a/style/style.css
+++ b/style/style.css
@@ -615,12 +615,16 @@ span{
     color: gold;
     font-size: 2rem;
 }
-/* contact section */
+
+/* contact section styles */
 .contact{
-    background-color: var(--bg-color);
+   margin-top: 50px;
+    background: var(--second-bg-color);
+    /* height: 100vh;
+    margin-bottom: 50px; */
 }
 .contact h2{
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     color: white;
 }
 #section-wrapper{
@@ -762,6 +766,132 @@ span{
 .submit-button:hover{
     background: #31279d;
 }
+
+/* start a new animation footer styles */
+.footer-parent{
+    background: var(--second-bg-color);
+    border: 1px solid var(--second-bg-color);
+}
+footer{
+    margin-top: 200px;
+    position: relative;
+    width: 100%;
+    background: #3586ff;
+    /* min-height: 100%; */
+    height: 250px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+footer .social-iconsF, 
+footer .menu{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    flex-wrap: wrap;
+}
+footer .social-iconsF li,
+footer .menu li{
+    list-style: none;
+}
+footer .social-iconsF li a,
+footer .menu li a{
+    font-size: 4em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+footer .social-iconsF li a:hover{
+    transform: translateY(-10px);
+}
+footer .menu li a{
+    font-size: 2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    text-decoration: none;
+    opacity: 0.75;
+}
+footer .menu li a:hover{
+    opacity: 1;
+}
+footer p{
+    color: white;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.5em;
+
+}
+footer .wave{
+    position: absolute;
+    top: -100px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(/Image/footer-photo/wave.png);
+    background-size: 1000px 100px;
+}
+footer .wave#wave1{
+    z-index: 1000;
+    opacity: 1;
+    bottom: 0;
+    animation: animateWave 4s linear infinite;
+}
+footer .wave#wave2
+{
+    z-index: 999;
+    opacity: 0.5;
+    bottom: 10px;
+    animation: animateWave_02 4s linear infinite;
+}
+
+
+footer .wave#wave3
+{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+}
+footer .wave#wave4
+{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animateWave_02 3s linear infinite;
+}
+
+@keyframes animateWave
+{
+    0%
+    {
+        background-position-x: 1000px;
+    }
+    100%
+    {
+        background-position-x: 0px;
+    }
+}
+
+@keyframes animateWave_02
+{
+    0%
+    {
+        background-position-x: 0px;
+    }
+    100%
+    {
+        background-position-x: 1000px;
+    }
+}
+/* start a new animation footer styles end */
+
 /* Responsive css for contact form */
 @media only screen and (max-width: 767px){
     .box-wrapper{
@@ -794,64 +924,7 @@ span{
 }
 
 
-/* footer styles */
-/* .footer{
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding: 40px 0;
-    background-color: var(--second-bg-color);
-}
-.footer .social{
-    text-align: center;
-    padding-bottom: 25px;
-    color: var(--main-color);
-}
-.footer .social a{
-    font-size: 25px;
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
-    display: inline-block;
-    text-align: center;
-    border-radius: 50%;
-    margin: 0 10px;
-    transition: 0.3s ease-in-out;
-}
-.footer .social a:hover{
-    transform: scale(1.2)translateY(-10px);
-    background-color: var(--main-color);
-    color: black;
-    box-shadow: 0 0 25px var(--main-color);
-}
-.footer ul{
-    margin-top: 0;
-    padding: 0;
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 0;
-    text-align: center;
-}
-.footer ul li a{
-    color: white;
-    border-bottom: 3px solid transparent;
-    transition: 0.3s ease-in-out;
-}
-.footer ul li:hover{
-    border-bottom: 3px solid var(--main-color);
-}
-.footer ul li{
-    display: inline-block;
-    padding: 0 15px;
-}
-.footer .copyright{
-    margin-top: 50px;
-    text-align: center;
-    font-size: 16px;
-    color: white;
-} */
+
 
 /* Responsive styles */
 @media(max-width:1285px){
@@ -987,129 +1060,3 @@ span{
     }
 
 }
-
-/* start a new animation footer styles */
-
-footer{
-    position: relative;
-    width: 100%;
-    background: #3586ff;
-    min-height: 100%;
-    padding: 20px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-footer .social-iconsF, 
-footer .menu{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    flex-wrap: wrap;
-}
-footer .social-iconsF li,
-footer .menu li{
-    list-style: none;
-}
-footer .social-iconsF li a,
-footer .menu li a{
-    font-size: 2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-}
-footer .social-iconsF li a:hover{
-    transform: translateY(-10px);
-}
-footer .menu li a{
-    font-size: 1.2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    text-decoration: none;
-    opacity: 0.75;
-}
-footer .menu li a:hover{
-    opacity: 1;
-}
-footer p{
-    color: #fff;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
-
-}
-footer .wave{
-    position: absolute;
-    top: -100px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: url(/Image/footer-photo/wave.png);
-    background-size: 1000px 100px;
-}
-footer .wave#wave1{
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0;
-    animation: animateWave 4s linear infinite;
-}
-footer .wave#wave2
-{
-    z-index: 999;
-    opacity: 0.5;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
-}
-
-
-footer .wave#wave3
-{
-    z-index: 1000;
-    opacity: 0.2;
-    bottom: 15px;
-    animation: animateWave 3s linear infinite;
-}
-footer .wave#wave4
-{
-    z-index: 999;
-    opacity: 0.7;
-    bottom: 20px;
-    animation: animateWave_02 3s linear infinite;
-}
-
-@keyframes animateWave
-{
-    0%
-    {
-        background-position-x: 1000px;
-    }
-    100%
-    {
-        background-position-x: 0px;
-    }
-}
-
-@keyframes animateWave_02
-{
-    0%
-    {
-        background-position-x: 0px;
-    }
-    100%
-    {
-        background-position-x: 1000px;
-    }
-}
-
-
-
-
-
-
-/* start a new animation footer styles end */
