--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,303 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
 }
+section{
+    min-height: 100vh;
+    padding: 10rem 12% 10rem;
+}
+
+/* 4th time  */
+/* .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 10%;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.header::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
+    z-index: -1;
+}
+
+
+.logo{
+    font-size: 2rem;
+    color: white;
+    text-decoration: none;
+    font-weight: 700;
+}
+.navbar a{
+    font-size: 1.15rem;
+    color: rgb(73, 72, 72);
+    text-decoration: none;
+    font-weight: 300;
+    margin-left: 2.5rem;
+}
+#check{
+    display: none;
+}
+
+.icons{
+    position: absolute;
+    right: 5%;
+    font-size: 2.8rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+
+
+@media (max-width: 992px) {
+    .header{
+        padding: 1.3rem 5%;
+    }
+}
+@media (max-width: 768px) {
+    .icons{
+        display: inline-flex;
+    }
+    .icons #close-icon{
+        display: none;
+    }
+
+    #check:checked~.icons #menu-icon{
+        display: none;
+    }
+    .icons #close-icon{
+        display: none;
+    }
+    #check:checked~.icons #close-icon {
+        display: block;
+    }
+
+    .navbar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background: rgba(0, 0, 0, .1);
+        backdrop-filter: blur(50px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+        overflow: hidden;
+        transition: .3s ease;
+    }
+    #check:checked~.navbar{
+        height: 17.7rem;
+    }
+    .navbar a{
+        display: block;
+        font-size: 1.1rem;
+        margin: 1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        transition: .3s ease;
+        opacity: 0;
+    }
+    #check:checked~.navbar a{
+        transform: translateY(0);
+        transition-delay: calc(.15s * var(--i));
+        opacity: 1;
+    }
+} */
+/* 4th time end */
+
+
+/* 2nd header */
 .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 4rem 12% 4rem;
+    background: rgb(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    z-index: 5;
+}
+.logo{
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 03s ease;
+}
+.logo:hover{
+    transform: scale(1.1);
+}
+.logo span{
+    text-shadow: 0 0 25px var(--main-color);
+}
+
+nav ul{
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+nav li {
+    height: auto;
+}
+nav a {
+    font-size: 1.8rem;
+    color: var(--text-color);
+    /* margin-left: 4rem; */
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+  
+}
+nav a:hover,
+nav a.active{
+    color: var(--main-color);
+    border-bottom: 3px solid var(--main-color);
+}
+nav li:first-child{
+    margin-right: auto;
+}
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+.sidebar li{
+    width: 100%;
+}
+.sidebar a{
+    width: 100%;
+}
+.menu-button{
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .hideOnMobile{
+        display: none;
+    }
+    .menu-button{
+        display: block;
+    }
+
+}
+@media (max-width: 400px) {
+    .sidebar{
+        width: 100%;
+    }
+}
+
+/* 2nd header end */
+
+/* new header  */
+/* nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 4rem 12% 4rem;
+    background: rgb(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 5;
+}
+.logo{
+    font-size: 3rem;
+    color: var(--text-color);
+    font-weight: 800;
+    cursor: pointer;
+    transition: 03s ease;
+}
+.logo:hover{
+    transform: scale(1.1);
+}
+.logo span{
+    text-shadow: 0 0 25px var(--main-color);
+}
+
+.newL{
+    color: white;
+}
+nav ul{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+nav ul li{
+    list-style-type: none;
+}
+nav ul li a{
+
+    font-size: 1.8rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+}
+nav ul li a:hover,
+nav ul li a.active{
+    color: var(--main-color);
+    border-bottom: 3px solid var(--main-color);
+}
+.menu-icon{
+    display: none;
+}
+.menu-icon i{
+    color: #fff;
+    font-size: 30px;
+   
+}
+@media (max-width:600px){
+    nav ul{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        text-align: center;
+        background: #004274;
+        gap: 0;
+        overflow: hidden;
+    }
+    nav ul li{
+        padding: 20px;
+    }
+    .menu-icon{
+        display: block;
+    }
+    #menuList{
+        transition: all 0.5s;
+    }
+} */
+/*new headers styles end  */
+
+/* header */
+/* .header{
     position: fixed;
     top: 0;
     left: 0;
@@ -66,12 +362,12 @@ body{
     font-size: 3.6rem;
     color: var(--main-color);
     display: none;
-}
+    color: red;
+    border: 2px solid red;
+} */
+/* header end */
 
-section{
-    min-height: 100vh;
-    padding: 10rem 12% 10rem;
-}
+/* banner style start */
 .home{
     display: flex;
     align-items: center;
@@ -265,6 +561,8 @@ span{
     }
 
 }
+/* banner style start */
+
 /* education section */
 .heading{
     font-size: 8rem;
@@ -360,6 +658,7 @@ span{
     background-color: var(--bg-color);
     width: 50px;
 }
+/* education section style end */
 /* service section */
 .services{
     background: var(--bg-color);
@@ -454,14 +753,14 @@ span{
     align-items: center;
     border: 2px solid var(--main-color);
     box-shadow: var(--main-color);
-    /* display: none; */
+    display: none;
 }
 
-/* .port-box:nth-child(1),
+.port-box:nth-child(1),
 .port-box:nth-child(2),
 .port-box:nth-child(3){
     display: inline-block;
-} */
+}
 
 .port-image{
     display: flex;
@@ -923,10 +1222,10 @@ footer .wave#wave4
     }
 }
 
+                                /* Responsive styles */
+                                /* Responsive styles */
+                                /* Responsive styles */
 
-
-
-/* Responsive styles */
 @media(max-width:1285px){
     html{
         font-size: 55%;
@@ -973,8 +1272,11 @@ footer .wave#wave4
 }
 
 @media(max-width:895px){
-    #menu-icon{
+
+    /* #menu-icon{
         display: block;
+        color: red;
+        border: 2px solid red;
     }
     .navbar{
         position: absolute;
@@ -994,7 +1296,9 @@ footer .wave#wave4
         font-size: 2rem;
         margin: 3rem 0;
         color: white;
-    }
+    } */
+
+
     .home{
         flex-direction: column-reverse;
         margin: 5rem 4rem;
@@ -1032,7 +1336,6 @@ footer .wave#wave4
     .header{
         padding-left: 15px;
         padding-right: 15px;
-        margin-top: 10px;
         
     }
     .home-img img{
@@ -1059,4 +1362,53 @@ footer .wave#wave4
     font-weight: 700;
     }
 
+}
+
+
+@media(max-width:360px){
+    .heading{
+        font-size: 3rem;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+    .education{
+        padding-top: 40px;
+       
+    }
+    .education h2{
+        margin-bottom: 35px;
+    }
+    .timeline-items{
+        width: auto;
+        height: auto;
+        margin: 0;
+       
+    }
+    /* services */
+   
+    .services h2{
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        color: white;
+    }
+  
+    .service-box{
+        
+        height: 300px;
+       
+    }
+  
+    .service-box .service-info{
+      
+        padding: 15px;
+    }
+    .service-info h4{
+        font-size: 2rem;
+       
+    }
+    .service-info p{
+        font-size: 1.5rem;
+    }
+  
 }
