--- a/style/style.css
+++ b/style/style.css
@@ -543,7 +543,7 @@ span{
     outline: none;
     border: none;
     cursor: pointer;
-    font-size: .85rem;
+    font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: .4px;
     margin-left: 1.3rem;
@@ -571,14 +571,14 @@ span{
     align-items: center;
     border: 2px solid var(--main-color);
     box-shadow: var(--main-color);
-    display: none;
+    /* display: none; */
 }
 
-.port-box:nth-child(1),
+/* .port-box:nth-child(1),
 .port-box:nth-child(2),
 .port-box:nth-child(3){
     display: inline-block;
-}
+} */
 
 .port-image{
     display: flex;
@@ -616,11 +616,13 @@ span{
     transform: scale(1.1);
 }
 .port-content h3{
-    font-size: 1.5rem;
+    font-size: 3rem;
+    font-style: italic;
     font-weight: 600;
 }
 .port-content p{
-    font-size: .8rem;
+    color: rgb(243, 241, 241);
+    font-size: 15px;
     margin: 5px 0 15px 0;
 }
 
@@ -741,6 +743,7 @@ span{
     margin-bottom: 50px; */
 }
 .contact h2{
+    padding-top: 4rem;
     margin-bottom: 1rem;
     color: white;
 }
@@ -1090,36 +1093,9 @@ footer .wave#wave4
 }
 
 @media(max-width:895px){
-
-    /* #menu-icon{
-        display: block;
-        color: red;
-        border: 2px solid red;
-    }
-    .navbar{
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 0;
-        padding: 1rem 3%;
-        background: rgb(0, 0, 0, 0.8);
-        backdrop-filter: blur(20px);
-        border-bottom-left-radius: 2rem;
-        border-left: 2px solid var(--main-color);
-        border-bottom: 2px solid var(--main-color);
-        display: none;
-    }
-    .navbar.active{
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-        color: white;
-    } */
-
-
     .home{
         flex-direction: column-reverse;
-        margin: 5rem 4rem;
+        margin-bottom: 4rem;
     }
     .home-content h3{
         font-size: 2.6rem;
@@ -1146,21 +1122,19 @@ footer .wave#wave4
 /* For mobile phone responsive */
 @media(max-width:600px){
     section{
-       
         padding: 0px;
         margin: 0px;
-
     }
     .header{
         padding-left: 15px;
         padding-right: 15px;
-        
     }
     .home-img img{
         width: 350px;
     }
     .home{
         padding: 35px;
+      
     }
     .home-img img{
         height: 360px;
@@ -1179,11 +1153,29 @@ footer .wave#wave4
     font-size: 44px;
     font-weight: 700;
     }
-
+    .main-text{
+        padding-top: 30px;
+    }
+    .headingS{
+        font-size: 4.5rem;
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 25px;
+    }
+    
+    footer .menu{
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        gap: 25px;
+     }
+     .contact h2{
+        padding-top: 4rem;
+    }
+   
+  
 }
 
-
-@media(max-width:360px){
+@media (max-width:450px) {
     .heading{
         font-size: 3rem;
         text-align: center;
@@ -1192,10 +1184,7 @@ footer .wave#wave4
     }
     .education{
         padding: 40px 40px 40px 12px;
-
-       
     }
-    
     .education h2{
         margin-bottom: 35px;
     }
@@ -1203,32 +1192,126 @@ footer .wave#wave4
         width: auto;
         height: auto;
         margin: 0;
-       
     }
-    /* services */
+    .main-text{
+        padding-top: 30px;
+    }
+    .service-box .service-info{
+        padding: 12px;
+    }
    
+    .service-info h4{
+        font-size: 3rem;
+      
+    }
+    .fillter-bittons .btn{
+        margin-left: 0;
+      
+    }
+    .testimonials .heading{
+        margin-top: 4rem;
+    }
+    .fillter-bittons{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 16px;
+        column-gap: 5px;
+        margin-left: 15px;
+        margin-right: 15px;
+     
+    }
+    .contact h2{
+        padding-top: 4rem;
+    }
+}
+
+@media(max-width:360px){
+
+    .heading{
+        font-size: 3rem;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+    .testimonials .heading{
+        margin-top: 4rem;
+    }
+    .education{
+        padding: 40px 40px 40px 12px;
+    }
+    .education h2{
+        margin-bottom: 35px;
+    }
+    .timeline-items{
+        width: auto;
+        height: auto;
+        margin: 0;
+    }
+
+    /* services */
     .services h2{
         margin-top: 3rem;
         margin-bottom: 3rem;
         color: white;
     }
-  
     .service-box{
-        
         height: 300px;
-       
     }
-  
     .service-box .service-info{
-      
         padding: 15px;
     }
-    .service-info h4{
-        font-size: 2rem;
-       
-    }
+  
     .service-info p{
         font-size: 1.5rem;
     }
-  
+
+    .main-text{
+        padding-top: 30px;
+    }
+    .headingS{
+        font-size: 4.5rem;
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 25px;
+    }
+    
+    .fillter-bittons .btn{
+        margin-left: 0;
+      
+    }
+    .fillter-bittons{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 16px;
+        column-gap: 5px;
+        margin-left: 15px;
+        margin-right: 15px;
+     
+    }
+
+    /* contact */
+    #section-wrapper{
+        width: 100%;
+       padding: 0%;
+    }
+    .form-title{
+        font-size: 2rem;
+    }
+    .contact h2{
+        padding-top: 4rem;
+    }
+     /* contact end */
+     /* footer */
+     
+    footer .menu{
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        gap: 20px;
+        
+     }
+     /* footer end */
 }
+    
+
+  
+
