--- a/style/style.css
+++ b/style/style.css
@@ -85,12 +85,15 @@ nav li:first-child{
     position: fixed;
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 50vh;
     width: 250px;
     z-index: 999;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgb(123, 124, 122);
+    box-shadow: whitesmoke;
     backdrop-filter: blur(10px);
-    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    /* background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1); */
     display: none;
     flex-direction: column;
     align-items: center;
@@ -133,57 +136,6 @@ nav li:first-child{
     }
 }
 
-/* 2nd header end */
-
-/* header */
-/* .header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 4rem 12% 4rem;
-    background: rgb(0, 0, 0, 0.3);
-    backdrop-filter: blur(10px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 5;
-}
-.logo{
-    font-size: 3rem;
-    color: var(--text-color);
-    font-weight: 800;
-    cursor: pointer;
-    transition: 03s ease;
-}
-.logo:hover{
-    transform: scale(1.1);
-}
-.logo span{
-    text-shadow: 0 0 25px var(--main-color);
-}
-
-.navbar a{
-    font-size: 1.8rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    font-weight: 500;
-    transition: 0.3s ease;
-    border-bottom: 3px solid transparent;
-}
-.navbar a:hover,
-.navbar a.active{
-    color: var(--main-color);
-    border-bottom: 3px solid var(--main-color);
-}
-#menu-icon{
-    font-size: 3.6rem;
-    color: var(--main-color);
-    display: none;
-    color: red;
-    border: 2px solid red;
-} */
-/* header end */
 
 /* banner style start */
 .home{
@@ -1171,6 +1123,9 @@ footer .wave#wave4
      .contact h2{
         padding-top: 4rem;
     }
+    .sidebar{
+        width: 100%;
+    }
    
   
 }
@@ -1222,6 +1177,9 @@ footer .wave#wave4
     }
     .contact h2{
         padding-top: 4rem;
+    }
+    .sidebar{
+        width: 100%;
     }
 }
 
@@ -1309,6 +1267,9 @@ footer .wave#wave4
         gap: 20px;
         
      }
+     .sidebar{
+        width: 100%;
+    }
      /* footer end */
 }
     
